<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".FilterActivity">

    <ImageView
        android:id="@+id/blueHeader"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectangle_5_shape"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tMaghanapNgLulutuin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maghanap_ng_lulutuin"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/blueHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/blueHeader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <RadioGroup
        android:id="@+id/rg_flavor"
        android:layout_width="151dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743">

        <RadioButton
            android:id="@+id/rb_sweet"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:text="@string/sweet"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rb_spicy"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:text="@string/spicy"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rb_sour"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:text="@string/sour"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rb_salty"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:text="@string/salty"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_ingredient"
        android:layout_width="151dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743">

        <RadioButton
            android:id="@+id/rb_vege"
            android:name="my_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/vege"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_conversion_absoluteHeight="35dp"
            tools:layout_conversion_absoluteWidth="120dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <RadioButton
            android:id="@+id/rb_fish"
            android:name="my_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/fish"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_conversion_absoluteHeight="35dp"
            tools:layout_conversion_absoluteWidth="120dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="35dp" />

        <RadioButton
            android:id="@+id/rb_chic"
            android:name="my_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:text="@string/chic"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_conversion_absoluteHeight="35dp"
            tools:layout_conversion_absoluteWidth="120dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="70dp" />

        <RadioButton
            android:id="@+id/rb_pork"
            android:name="my_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/pork"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_conversion_absoluteHeight="35dp"
            tools:layout_conversion_absoluteWidth="120dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <RadioButton
            android:id="@+id/rb_beef"
            android:name="my_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/beef"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_conversion_absoluteHeight="35dp"
            tools:layout_conversion_absoluteWidth="120dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="35dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainflavor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495" />

    <CheckBox
        android:id="@+id/cb_customize"
        android:layout_width="120dp"
        android:layout_height="34dp"
        android:text="@string/customize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainingredient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495" />

    <EditText
        android:id="@+id/txt_budget"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261" />

    <Spinner
        android:id="@+id/spinner_difficulty"
        android:layout_width="120dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261" />

    <Button
        android:id="@+id/btn_filter"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:background="@color/blue"
        android:text="@string/filter"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>